Standard network mode translations, refs #1706

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -753,7 +753,7 @@ general.folder_name=Name
 general.friday=Friday
 general.hours=Hour(s)
 general.inviter=Invitor
-general.lan_only=LAN only
+general.network_mode.lan_only=LAN only
 general.local_copy_at=Local copy at
 general.localized_date_format=MMMM dd yyyy
 general.localnet=LAN
@@ -773,7 +773,7 @@ general.save.key=S
 general.save=Save
 general.search=Search
 general.seconds=Second(s)
-general.server_only=Server only
+general.network_mode.server_only=Server only
 general.size=Size
 general.sunday=Sunday
 general.synchonisation=Synchronization
@@ -978,12 +978,9 @@ preferences.dialog.lan_line_settings=LAN speed
 preferences.dialog.line_settings=Internet speed
 preferences.dialog.network.title=Network
 preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-preferences.dialog.network_mode.lan_only=LAN only
 preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
-preferences.dialog.network_mode.server_only=Server only
 preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, LAN computers and people who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
-preferences.dialog.network_mode.private=LAN and Internet
 preferences.dialog.nickname=Nickname
 preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
 preferences.dialog.open_port.tooltip=Opens the PowerFolder port on the Windows Firewall
@@ -1204,10 +1201,8 @@ winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
 wizard.basic_setup.computer_name=Name of this computer
 wizard.basic_setup.default_folder_name=Synchronized Files
-wizard.basic_setup.lan_only=LAN only
 wizard.basic_setup.language_restart=Language (requires restart)
 wizard.basic_setup.networking=Connect to
-wizard.basic_setup.private=LAN and Internet
 wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basic_setup.upload.title=Unlimited connection speed
