--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -862,7 +862,7 @@ general.hours=Heure(s)
 #orig#general.inviter=Inviter
 general.inviter=Inviteur
 #orig#general.lan_only=LAN only
-general.lan_only=LAN uniquement
+general.network_mode.lan_only=LAN uniquement
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=Emplacement du dossier \u00e0 partager
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -1252,17 +1252,12 @@ preferences.dialog.line_settings=Vitesse de connexion \u00e0 Internet
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
 preferences.dialog.network.title=R\u00e9seau
-#orig#preferences.dialog.network_mode.lan_only=LAN only
-preferences.dialog.network_mode.lan_only=LAN
 #orig#preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connecte uniquement les clients PowerFolder du r\u00e9seau local (LAN).<BR>La seule connexion sortante sera pour v\u00e9rifier une mise \u00e0 jour sur le site web de PowerFolder.<BR>Votre coupe-feu d\u00e9tectera une connexion sortante au 224.0.0.1 (adresse IP) ou ALL-SYSTEMS.MCAST.NET (nom DNS)<BR>Ceci est utilis\u00e9 pour d\u00e9tecter les autres clients PowerFolder de votre r\u00e9seau local (LAN).</BODY></HTML>
 #orig#preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.name=Se connecter \u00e0
-#orig#preferences.dialog.network_mode.private=LAN and Internet
-preferences.dialog.network_mode.private=LAN et Internet
 #orig#preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, LAN computers and people who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Activer le transfert de fichier \u00e0 travers le LAN et Internet.<BR>Seul(e)s les ami(e)s, les utilisateurs du LAN et des personnes ayant rejoints le dossier de partage sont actuellement connect\u00e9(e)s.<BR>Permet \u00e0 PowerFolder de se connecter aux supernodes pour trouver vos amie(e)s sur Internet.</BODY></HTML>
-##preferences.dialog.network_mode.server_only=Server only
 ##preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
 preferences.dialog.nickname=Pseudo
@@ -1788,13 +1783,9 @@ winutils.shortcut.description=Raccourci cr\u00e9\u00e9 par PowerFolder
 wizard.basic_setup.computer_name=Nom de cet ordinateur
 #orig#wizard.basic_setup.default_folder_name=Synchronized Files
 wizard.basic_setup.default_folder_name=Synchronized Files
-#orig#wizard.basic_setup.lan_only=LAN only
-wizard.basic_setup.lan_only=R\u00e9seau local LAN
 ##wizard.basic_setup.language_restart=Language (requires restart)
 #orig#wizard.basic_setup.networking=Connect to
 wizard.basic_setup.networking=Connect\u00c3\u00a9(e) \u00c3\u00a0)
-#orig#wizard.basic_setup.private=LAN and Internet
-wizard.basic_setup.private=LAN et Internet
 #orig#wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.title=Configuration standard
 #orig#wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
