--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -862,7 +862,7 @@ general.hours=Ora(e)
 #orig#general.inviter=Inviter
 general.inviter=Invitante
 #orig#general.lan_only=LAN only
-general.lan_only=solo LAN
+general.network_mode.lan_only=solo LAN
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=Copia locale a
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -1252,17 +1252,12 @@ preferences.dialog.line_settings=Velocit\u00e0 di connessione Internet
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
 preferences.dialog.network.title=Rete
-#orig#preferences.dialog.network_mode.lan_only=LAN only
-preferences.dialog.network_mode.lan_only=solo LAN
 #orig#preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connetti solo a client PowerFolder nella LAN.<BR>L'unica connessione esterna sar\u00e0 al sito che controlla gli aggiornamenti.<BR>Il tuo firewall rilever\u00e0 una connessione in uscita a 224.0.0.1 o ALL-SYSTEMS.MCAST.NET<BR>Noi usiamo questa per trovare gli altri client PowerFolder nella tua LAN.</BODY></HTML>
 #orig#preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.name=Connetti a
-#orig#preferences.dialog.network_mode.private=LAN and Internet
-preferences.dialog.network_mode.private=LAN e Internet
 #orig#preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, LAN computers and people who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Abilita il trasferimento file sulla LAN e Internet.<BR>Attualmente connette solo ad amici, utenti sulla LAN e persone, che sono in cartelle condivise.<BR>Inoltre PowerFolder si connette a supernodi per trovare i tuoi amici su internet.</BODY></HTML>
-##preferences.dialog.network_mode.server_only=Server only
 ##preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
 preferences.dialog.nickname=Nome utente
@@ -1784,13 +1779,9 @@ winutils.shortcut.description=Questo collegamento \u00e8 stato aggiunto da Power
 wizard.basic_setup.computer_name=Nome di questo computer
 #orig#wizard.basic_setup.default_folder_name=Synchronized Files
 wizard.basic_setup.default_folder_name=Files sincronizzati
-#orig#wizard.basic_setup.lan_only=LAN only
-wizard.basic_setup.lan_only=solo LAN
 ##wizard.basic_setup.language_restart=Language (requires restart)
 #orig#wizard.basic_setup.networking=Connect to
 wizard.basic_setup.networking=Connetti a
-#orig#wizard.basic_setup.private=LAN and Internet
-wizard.basic_setup.private=LAN e Internet
 #orig#wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.title=Impostazioni di base
 #orig#wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
