--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -862,7 +862,7 @@ general.hours=\u6642\u9593
 #orig#general.inviter=Inviter
 general.inviter=\u62db\u5f85\u4e3b
 #orig#general.lan_only=LAN only
-general.lan_only=LAN \u9650\u5b9a
+general.network_mode.lan_only=LAN \u9650\u5b9a
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -1252,17 +1252,12 @@ preferences.dialog.line_settings=\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u63a
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
 preferences.dialog.network.title=\u30cd\u30c3\u30c8\u30ef\u30fc\u30af
-#orig#preferences.dialog.network_mode.lan_only=LAN only
-preferences.dialog.network_mode.lan_only=LAN \u5185\u306b\u9650\u5b9a
 #orig#preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>\u63a5\u7d9a\u3092\u30ed\u30fc\u30ab\u30eb\u30a8\u30ea\u30a2\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u5185\u306e PowerFolder \u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u306b\u9650\u5b9a\u3057\u307e\u3059\u3002<BR>LAN \u5916\u3078\u306e\u63a5\u7d9a\u306f\u672c\u30d7\u30ed\u30b0\u30e9\u30e0\u306e\u66f4\u65b0\u7248\u30c1\u30a7\u30c3\u30af\u30b5\u30a4\u30c8\u306e\u307f\u306b\u306a\u308a\u307e\u3059\u3002<BR>\u3054\u5229\u7528\u306e\u30d5\u30a1\u30a4\u30a2\u30fc\u30a6\u30a9\u30fc\u30eb\u304c 224.0.0.1 \u306a\u3044\u3057 ALL-SYSTEMS.MCAST.NET \u3078\u306e\u901a\u4fe1\u3092\u691c\u77e5\u3059\u308b\u304b\u3082\u3057\u308c\u307e\u305b\u3093\u304c\u3001<BR>\u305d\u308c\u3089\u306e\u901a\u4fe1\u306f LAN \u5185\u306e\u4ed6\u306e PowerFolder \u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u3092\u691c\u51fa\u3059\u308b\u305f\u3081\u306e\u3082\u306e\u3067\u3059\u3002</BODY></HTML>
 #orig#preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.name=\u63a5\u7d9a\u5148
-#orig#preferences.dialog.network_mode.private=LAN and Internet
-preferences.dialog.network_mode.private=LAN \u3068\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8
 #orig#preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, LAN computers and people who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>LAN \u304a\u3088\u3073\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u4e0a\u3067\u30d5\u30a1\u30a4\u30eb\u8ee2\u9001\u3092\u53ef\u80fd\u306b\u3057\u307e\u3059\u3002<BR>\u57fa\u672c\u7684\u306b\u3001\u53cb\u4eba\u3084 LAN \u5185\u306e\u30e6\u30fc\u30b6\u30fc\u304a\u3088\u3073\u540c\u3058\u30d5\u30a9\u30eb\u30c0\u306e\u53c2\u52a0\u8005\u306b\u306e\u307f\u63a5\u7d9a\u3057\u307e\u3059\u304c\u3001<BR>\u305d\u308c\u3068\u306f\u5225\u306b\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u4e0a\u3067\u306e\u53cb\u4eba\u691c\u7d22\u3092\u53ef\u80fd\u306b\u3059\u308b\u76ee\u7684\u3067\u3001 PowerFolder \u306f\u30b9\u30fc\u30d1\u30fc\u30ce\u30fc\u30c9\u306b\u63a5\u7d9a\u3057\u307e\u3059\u3002</BODY></HTML>
-##preferences.dialog.network_mode.server_only=Server only
 ##preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
 preferences.dialog.nickname=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0
@@ -1780,13 +1775,9 @@ winutils.shortcut.description=\u3053\u306e\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u
 
 ##wizard.basic_setup.computer_name=Name of this computer
 ##wizard.basic_setup.default_folder_name=Synchronized Files
-#orig#wizard.basic_setup.lan_only=LAN only
-wizard.basic_setup.lan_only=LAN \u5185\u9650\u5b9a
 ##wizard.basic_setup.language_restart=Language (requires restart)
 #orig#wizard.basic_setup.networking=Connect to
 wizard.basic_setup.networking=\u63a5\u7d9a\u5148
-#orig#wizard.basic_setup.private=LAN and Internet
-wizard.basic_setup.private=LAN \u3068\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8
 #orig#wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.title=\u57fa\u672c\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7
 #orig#wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
