--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -861,7 +861,7 @@ general.hours=\u0427\u0430\u0441\u043e\u0432
 #orig#general.inviter=Inviter
 general.inviter=\u041f\u0440\u0438\u0433\u043b\u0430\u0441\u0438\u0432\u0448\u0438\u0439
 #orig#general.lan_only=LAN only
-general.lan_only=\u0422\u043e\u043b\u044c\u043a\u043e \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u0441\u0435\u0442\u044c LAN
+general.network_mode.lan_only=\u0422\u043e\u043b\u044c\u043a\u043e \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u0441\u0435\u0442\u044c LAN
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=\u041c\u0435\u0441\u0442\u043e \u0434\u043b\u044f \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -1251,17 +1251,12 @@ preferences.dialog.line_settings=\u0421\u043a\u043e\u0440\u043e\u0441\u0442\u044
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
 preferences.dialog.network.title=\u0421\u0435\u0442\u044c
-#orig#preferences.dialog.network_mode.lan_only=LAN only
-preferences.dialog.network_mode.lan_only=\u0422\u043e\u043b\u044c\u043a\u043e \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u0441\u0435\u0442\u044c
 #orig#preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>\u0421\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u0442\u043e\u043b\u044c\u043a\u043e \u043a PowerFolder \u0432 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u0439 \u0441\u0435\u0442\u0438.<BR>\u0412\u043d\u0435\u0448\u043d\u0435\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u0442\u043e\u043b\u044c\u043a\u043e \u043d\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0443 \u043d\u043e\u0432\u043e\u0439 \u0432\u0435\u0440\u0441\u0438\u0438.<BR>\u0412\u0430\u0448 \u0431\u0440\u0430\u043d\u0434\u043c\u0430\u0443\u0435\u0440 \u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u043e\u0431\u043d\u0430\u0440\u0443\u0436\u0438\u0442 \u0438\u0441\u0445\u043e\u0434\u044f\u0449\u0438\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u043a 224.0.0.1 \u0438\u043b\u0438 ALL-SYSTEMS.MCAST.NET<BR>\u042d\u0442\u043e \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0435\u0442\u0441\u044f \u0434\u043b\u044f \u043e\u0431\u043d\u0430\u0440\u0443\u0436\u0435\u043d\u0438\u0435 \u0443\u0437\u043b\u043e\u0432 PowerFolder \u0432 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u0439 \u0441\u0435\u0442\u0438.</BODY></HTML>
 #orig#preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.name=\u041f\u0440\u0438\u0441\u043e\u0435\u0434\u0438\u043d\u0438\u0442\u044c\u0441\u044f \u043a
-#orig#preferences.dialog.network_mode.private=LAN and Internet
-preferences.dialog.network_mode.private=\u041b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u0441\u0435\u0442\u044c (LAN) \u0438 Internet
 #orig#preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, LAN computers and people who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>\u0412\u043a\u043b\u044e\u0447\u0430\u0435\u0442 \u043f\u0435\u0440\u0435\u0434\u0430\u0447\u0443 \u0444\u0430\u0439\u043b\u043e\u0432 \u0447\u0435\u0440\u0435\u0437 LAN \u0438 Internet.<BR>\u041d\u0430 \u0441\u0430\u043c\u043e\u043c \u0436\u0435 \u0434\u0435\u043b\u0435 \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0438\u043d\u044f\u0435\u0442\u0441\u044f \u0442\u043e\u043b\u044c\u043a\u043e \u043a \u0434\u0440\u0443\u0437\u044c\u044f\u043c, \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f\u043c LAN \u0438 \u043b\u044e\u0434\u044f\u043c, \u043d\u0430\u0445\u043e\u0434\u044f\u0449\u0438\u043c\u0441\u044f \u0432 \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u043d\u044b\u0445 \u043f\u0430\u043f\u043a\u0430\u0445.<BR>\u0414\u0430\u043b\u0435\u0435 PowerFolder \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0438\u043d\u044f\u0435\u0442\u0441\u044f \u043a \u0441\u0435\u0440\u0432\u0435\u0440\u0430\u043c, \u0447\u0442\u043e\u0431\u044b \u043d\u0430\u0439\u0442\u0438 \u0432\u0430\u0448\u0438\u0445 \u0434\u0440\u0443\u0437\u0435\u0439 \u0432 \u0441\u0435\u0442\u0438 internet.</BODY></HTML>
-##preferences.dialog.network_mode.server_only=Server only
 ##preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
 preferences.dialog.nickname=\u0418\u043c\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
@@ -1785,13 +1780,9 @@ winutils.shortcut.description=\u042d\u0442\u043e\u0442 \u044f\u0440\u043b\u044b\
 wizard.basic_setup.computer_name=\u0418\u043c\u044f \u044d\u0442\u043e\u0433\u043e \u043a\u043e\u043c\u043f\u044c\u044e\u0442\u0435\u0440\u0430
 #orig#wizard.basic_setup.default_folder_name=Synchronized Files
 wizard.basic_setup.default_folder_name=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u044b\u0435 \u0444\u0430\u0439\u043b\u044b
-#orig#wizard.basic_setup.lan_only=LAN only
-wizard.basic_setup.lan_only=\u0422\u043e\u043b\u044c\u043a\u043e \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u0441\u0435\u0442\u044c
 ##wizard.basic_setup.language_restart=Language (requires restart)
 #orig#wizard.basic_setup.networking=Connect to
 wizard.basic_setup.networking=\u041f\u0440\u0438\u0441\u043e\u0435\u0434\u0438\u043d\u0438\u0442\u044c\u0441\u044f \u043a
-#orig#wizard.basic_setup.private=LAN and Internet
-wizard.basic_setup.private=LAN \u0438 Internet
 #orig#wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.title=\u0411\u0430\u0437\u043e\u0432\u0430\u044f \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u043a\u0430
 #orig#wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
