--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -866,7 +866,7 @@ general.hours=Stunden
 #orig#general.inviter=Inviter
 general.inviter=Von
 #orig#general.lan_only=LAN only
-general.lan_only=Nur LAN
+general.network_mode.lan_only=Nur LAN
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=Lokaler Speicherort
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -1241,15 +1241,10 @@ preferences.dialog.line_settings=Internet Geschwindigkeit
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
 preferences.dialog.network.title=Netzwerk
-#orig#preferences.dialog.network_mode.lan_only=LAN only
-preferences.dialog.network_mode.lan_only=Nur LAN
 ##preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 #orig#preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.name=Verbindungen
-#orig#preferences.dialog.network_mode.private=LAN and Internet
-preferences.dialog.network_mode.private=LAN und Internet
 ##preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, LAN computers and people who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
-##preferences.dialog.network_mode.server_only=Server only
 ##preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
 preferences.dialog.nickname=Benutzername
@@ -1759,13 +1754,9 @@ winutils.shortcut.description=Diese Verkn\u00fcpfung wurde von PowerFolder erste
 wizard.basic_setup.computer_name=Name dieses Computers
 #orig#wizard.basic_setup.default_folder_name=Synchronized Files
 wizard.basic_setup.default_folder_name=Synchronisierte Dateien
-#orig#wizard.basic_setup.lan_only=LAN only
-wizard.basic_setup.lan_only=Nur LAN
 ##wizard.basic_setup.language_restart=Language (requires restart)
 #orig#wizard.basic_setup.networking=Connect to
 wizard.basic_setup.networking=Verbindungen
-#orig#wizard.basic_setup.private=LAN and Internet
-wizard.basic_setup.private=LAN und Internet
 #orig#wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.title=Basis Setup
 #orig#wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
