--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -862,7 +862,7 @@ general.hours=Hora(s)
 #orig#general.inviter=Inviter
 general.inviter=Invitador
 #orig#general.lan_only=LAN only
-general.lan_only=LAN solamente
+general.network_mode.lan_only=LAN solamente
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=Copia local en
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -1252,17 +1252,12 @@ preferences.dialog.line_settings=Velocidad de Conexi\u00f3n a Internet
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
 preferences.dialog.network.title=Red
-#orig#preferences.dialog.network_mode.lan_only=LAN only
-preferences.dialog.network_mode.lan_only=LAN solamente
 #orig#preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Conectar \u00fanicamente con clientes de PowerFolder ane la red local.<BR>La \u00fanica coneccion fuera de la red local es para buscar a actualizaciones.<BR>Tu firewall quizas anuncie una conecci\u00f3n de salida a la direcci\u00f3n 224.0.0.1 o ALL-SYSTEMS.MCAST.NET<BR>Ese es el m\u00e9tedo para detectar otros clientes de PowerFolder en tu red local.</BODY></HTML>
 #orig#preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.name=Conectar a
-#orig#preferences.dialog.network_mode.private=LAN and Internet
-preferences.dialog.network_mode.private=LAN e Internet
 #orig#preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, LAN computers and people who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Habilita la transferencia de archives sobre el LAN y el Internet.<BR>Solo conecta con amigos, usuarios del LAN y aquiellos que son miembros de una carpeta.<BR>Adem\u00e1s, PowerFolder se conecta con supernodos para encontra a tus amigos en el Internet.</BODY></HTML>
-##preferences.dialog.network_mode.server_only=Server only
 ##preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
 preferences.dialog.nickname=Apodo
@@ -1786,13 +1781,9 @@ winutils.shortcut.description=Este atajo fue puesto por PowerFolder
 wizard.basic_setup.computer_name=Nombre esta computadora
 #orig#wizard.basic_setup.default_folder_name=Synchronized Files
 wizard.basic_setup.default_folder_name=Archivos Sincronizados
-#orig#wizard.basic_setup.lan_only=LAN only
-wizard.basic_setup.lan_only=LAN solamente
 ##wizard.basic_setup.language_restart=Language (requires restart)
 #orig#wizard.basic_setup.networking=Connect to
 wizard.basic_setup.networking=Conectar a
-#orig#wizard.basic_setup.private=LAN and Internet
-wizard.basic_setup.private=LAN e Internet
 #orig#wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.title=Configuraci\u00f3n B\u00e1sica
 #orig#wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
