--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -862,7 +862,7 @@ general.hours=\u5c0f\u65f6
 #orig#general.inviter=Inviter
 general.inviter=\u9080\u8bf7\u8005
 #orig#general.lan_only=LAN only
-general.lan_only=\u53ea\u5bf9\u5c40\u57df\u7f51
+general.network_mode.lan_only=\u53ea\u5bf9\u5c40\u57df\u7f51
 #orig#general.local_copy_at=Local copy at
 general.local_copy_at=\u672c\u5730\u526f\u672c
 #orig#general.localized_date_format=MMMM dd yyyy
@@ -1252,17 +1252,12 @@ preferences.dialog.line_settings=\u4e92\u8054\u7f51\u4f20\u8f93\u901f\u7387
 ##preferences.dialog.min_to_sys_tray=Minimize to system tray
 #orig#preferences.dialog.network.title=Network
 preferences.dialog.network.title=\u7f51\u7edc
-#orig#preferences.dialog.network_mode.lan_only=LAN only
-preferences.dialog.network_mode.lan_only=\u4ec5\u7528\u5c40\u57df\u7f51
 #orig#preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>\u53ea\u8fde\u63a5\u5c40\u57df\u7f51\u7684PowerFolder\u5ba2\u6237\u7aef\u3002<BR>\u53ea\u4f1a\u5728\u68c0\u67e5\u66f4\u65b0\u65f6\u8fde\u63a5\u4e92\u8054\u7f51\u3002<BR>\u4f60\u7684\u9632\u706b\u5899\u53ef\u80fd\u4f1a\u68c0\u6d4b\u5230224.0.0.1\u6216ALL-SYSTEMS.MCAST.NET\u7684\u8fde\u63a5\u3002<BR>\u6211\u4eec\u7528\u5b83\u6765\u68c0\u6d4b\u5c40\u57df\u7f51\u4e2d\u7684\u5176\u5b83PowerFolder\u5ba2\u6237\u7aef\u3002</BODY></HTML>
 #orig#preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.name=\u8fde\u63a5\u65b9\u5f0f
-#orig#preferences.dialog.network_mode.private=LAN and Internet
-preferences.dialog.network_mode.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
 #orig#preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, LAN computers and people who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>\u6587\u4ef6\u80fd\u591f\u5728LAN\u53caInternet\u95f4\u4f20\u8f93\u3002<BR>\u5b9e\u9645\u4e0a\u53ea\u8fde\u63a5\u5c40\u57df\u7f51\u7684\u597d\u53cb\u3001\u7528\u6237\u53ca\u52a0\u5165\u6b64\u6587\u4ef6\u5939\u7684\u4eba\u3002<BR>\u5c06\u6765PowerFolder\u5c06\u8fde\u63a5\u8d85\u7ea7\u8282\u70b9\u6765\u67e5\u627e\u4f60\u5728\u4e92\u8054\u7f51\u4e0a\u7684\u597d\u53cb\u3002</BODY></HTML>
-##preferences.dialog.network_mode.server_only=Server only
 ##preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
 preferences.dialog.nickname=\u6635\u79f0
@@ -1786,13 +1781,9 @@ winutils.shortcut.description=\u6b64\u5feb\u6377\u65b9\u5f0f\u7531PowerFolder\u6
 wizard.basic_setup.computer_name=\u547d\u540d\u8fd9\u53f0\u8ba1\u7b97\u673a
 #orig#wizard.basic_setup.default_folder_name=Synchronized Files
 wizard.basic_setup.default_folder_name=\u6587\u4ef6\u5df2\u7ecf\u540c\u6b65
-#orig#wizard.basic_setup.lan_only=LAN only
-wizard.basic_setup.lan_only=\u4ec5\u7528\u5c40\u57df\u7f51
 ##wizard.basic_setup.language_restart=Language (requires restart)
 #orig#wizard.basic_setup.networking=Connect to
 wizard.basic_setup.networking=\u8fde\u63a5\u65b9\u5f0f
-#orig#wizard.basic_setup.private=LAN and Internet
-wizard.basic_setup.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
 #orig#wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.title=\u57fa\u672c\u8bbe\u7f6e
 #orig#wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
