--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1112,7 +1112,7 @@ status_bar.status_change.title=Connection Status
 status_bar.sleep.tips=Disable folder change scanning
 status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.poor_quality_warning.title=Poor connection quality
-status_bar.poor_quality_warning.text=*** TOT, What do we want to say here? ***
+status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
 
 synchronization.notice.title=Activated transfer mode {0}
 synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
