--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,9 +19,9 @@
 # http://www.powerfolder.com
 #
 
-##about_dialog.check_for_updates.key=C
-##about_dialog.check_for_updates.text=Check
-##about_dialog.check_for_updates.tips=Check for PowerFolder updates
+about_dialog.check_for_updates.key=U
+about_dialog.check_for_updates.text=Updates
+about_dialog.check_for_updates.tips=Nach software updates suche
 #orig#about_dialog.contributers=Contributers
 about_dialog.contributers=Mitarbeiter
 #orig#about_dialog.documentation=Documentation
@@ -41,16 +41,16 @@ about_dialog.power_folder.max=Speicher (max)\: {0}MB
 about_dialog.power_folder.text=Version\: {0}
 #orig#about_dialog.power_folder.used=Used memory\: {0}MB
 about_dialog.power_folder.used=Speicher (benutzt)\: {0}MB
-##about_dialog.send_bug_report.key=R
-##about_dialog.send_bug_report.text=Report
-##about_dialog.send_bug_report.tips=Send a bug report to PowerFolder
+about_dialog.send_bug_report.key=R
+about_dialog.send_bug_report.text=Melden
+about_dialog.send_bug_report.tips=Einen Fehler melden
 #orig#about_dialog.support=Support
 about_dialog.support=Support
 #orig#about_dialog.sync_your_world=Sync your World
 about_dialog.sync_your_world=Sync your World
-##about_dialog.system_monitor.key=M
-##about_dialog.system_monitor.text=Monitor
-##about_dialog.system_monitor.tips=Display a system monitor panel
+about_dialog.system_monitor.key=M
+about_dialog.system_monitor.text=Monitor
+about_dialog.system_monitor.tips=System monitor anzeigen
 #orig#about_dialog.team=Team
 about_dialog.team=Team
 #orig#about_dialog.title=About PowerFolder
@@ -66,25 +66,31 @@ about_dialog.your_system.screen=Aufl\u00f6sung\: {0}x{1}
 #orig#about_dialog.your_system.title=Your System
 about_dialog.your_system.title=Ihr System
 
-##action_abort_download.description=Abort selected download
-##action_abort_download.key=A
-##action_abort_download.name=Abort
+action_abort_download.description=Bricht den ausgewählten download ab
+action_abort_download.key=A
+action_abort_download.name=Abbrechen
 
-##action_activate_warning.description=Display any warnings
-##action_activate_warning.key=W
-##action_activate_warning.name=Warning
+action_activate_warning.description=Zeigt warnungen
+action_activate_warning.key=W
+action_activate_warning.name=Warnung
 
 ##action_add_directory.description=Add directory
 ##action_add_directory.key=A
 ##action_add_directory.name=Add
 
-##action_add_friend.description=Add computer to friend list
-##action_add_friend.key=A
-##action_add_friend.name=Add
+action_add_friend.description=Einen Computer der Freundesliste hinzufügen
+action_add_friend.key=H
+action_add_friend.name=Hinzufügen
 
-##action_add_ignore.description=Exclude files from sync
-##action_add_ignore.key=A
-##action_add_ignore.name=Exclude
+action_add_ignore.description=Dateien von der Synchronization ausschließen
+action_add_ignore.key=A
+action_add_ignore.name=Ausschließen
+
+## -------------------------------------------------------------------
+##
+## @ TOT: Bis hier übersetzt
+##
+## -------------------------------------------------------------------
 
 ##action_add_invitee.description=Add invitee
 ##action_add_invitee.key=A
