Minor text fixes

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -589,7 +589,7 @@ estimation.unknown=unbekannt
 ##exp_folder_view.estimated_synchronized=Estimated synchronized\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
-##exp_folder_view.files_available={0} file(s) available
+exp_folder_view.files_available={0} verfügbar
 ##exp_folder_view.files_available_tip=Display the available files
 ##exp_folder_view.folder_local_online_text=Local folder, backed up online
 ##exp_folder_view.folder_local_text=Local folder
