--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1015,7 +1015,7 @@ line_speed.adsl768=DSL 16000 (768Kbit up)
 #orig#line_speed.custom_speed=Custom line
 line_speed.custom_speed=Benutzerdefiniert
 #orig#line_speed.download_speed=Download
-line_speed.download_speed=Download Limit
+line_speed.download_speed=Download
 #orig#line_speed.lan10=LAN 10mbit/s
 line_speed.lan10=LAN 10mbit/s
 #orig#line_speed.lan100=LAN 100mbit/s
@@ -1025,7 +1025,7 @@ line_speed.lan1000=LAN 1000mbit/s
 #orig#line_speed.unlimited=Unlimited
 line_speed.unlimited=Unbegrenzt
 #orig#line_speed.upload_speed=Upload
-line_speed.upload_speed=Upload Limit
+line_speed.upload_speed=Upload
 
 #orig#low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 low_memory.configure_failure=PowerFolder konnten keine h\u00f6heren Hauptspeicher-Einstellungen installieren.
@@ -1156,7 +1156,7 @@ preferences.dialog.advanced.title=Erweitert
 ##preferences.dialog.auto_expand=Auto expand Folders and Computers
 ##preferences.dialog.backup_only_clinet=Backup-only client
 #orig#preferences.dialog.base_dir=Base directory
-preferences.dialog.base_dir=Standard Speicherort f\u00fcr neue Folder
+preferences.dialog.base_dir=Standard Speicherort
 #orig#preferences.dialog.bind=Interface address
 preferences.dialog.bind=Interface
 #orig#preferences.dialog.bind.any=Any
@@ -1168,7 +1168,7 @@ preferences.dialog.bindDescr=Beschreibung
 #orig#preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.create_desktop_shortcuts=Link auf dem Desktop anlegen
 #orig#preferences.dialog.delta_sync=Delta sync
-preferences.dialog.delta_sync=Delta Sync im Internet verwenden
+preferences.dialog.delta_sync=Delta Sync
 #orig#preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
 preferences.dialog.delta_sync.tooltip=Synchronisiert nur Datei\u00e4nderungen
 #orig#preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
@@ -1309,11 +1309,11 @@ preferences.dialog.statusValidFailed=DynDns {0}\: \u00dcberpr\u00fcfung fehlgesc
 preferences.dialog.statusWaitDynDns=Bitte warten Sie, w\u00e4hrend DynDns {0} \u00fcberpr\u00fcft wird\!
 ##preferences.dialog.swarming=Multi-source download
 #orig#preferences.dialog.swarming.internet=on Internet
-preferences.dialog.swarming.internet=Swarming (Multi-Quellen) Downloads im Internet verwenden
+preferences.dialog.swarming.internet=im Internet
 #orig#preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources coming from the Internet
 preferences.dialog.swarming.internet.tooltip=Mehrere Quellen f\u00fcr Downloads im Internet verwenden
 #orig#preferences.dialog.swarming.lan=on LAN
-preferences.dialog.swarming.lan=Swarming (Multi-Quellen) Downloads im LAN verwenden
+preferences.dialog.swarming.lan=im LAN
 #orig#preferences.dialog.swarming.lan.tooltip=Enable downloads from multiple sources in LAN
 preferences.dialog.swarming.lan.tooltip=Mehrere Quellen f\u00fcr Downloads im LAN verwenden
 #orig#preferences.dialog.title=Preferences
@@ -1325,17 +1325,17 @@ preferences.dialog.titleProcessing=Arbeite...
 ##preferences.dialog.ui.title=User Interface
 ##preferences.dialog.underline_link=Always underline links
 #orig#preferences.dialog.use.relayed.connections=Use relayed connections
-preferences.dialog.use.relayed.connections=Relayed Verbindungen zulassen
-##preferences.dialog.use.udt.connections=Use UDT connections
-##preferences.dialog.use_delta_on_internet=on Internet
+preferences.dialog.use.relayed.connections=Relayed Verbindungen verwenden
+preferences.dialog.use.udt.connections=UDT Verbindungen verwenden
+preferences.dialog.use_delta_on_internet=im Internet
 #orig#preferences.dialog.use_delta_on_lan=on LAN
-preferences.dialog.use_delta_on_lan=Delta Sync im LAN verwenden
+preferences.dialog.use_delta_on_lan=im LAN
 ##preferences.dialog.use_mass_delete=Use mass delete protection
 #orig#preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.use_pf_icon=PowerFolder Verzeichnis-Symbole unter Windows anzeigen
-##preferences.dialog.use_zip_on_internet=on Internet
+preferences.dialog.use_zip_on_internet=im Internet
 #orig#preferences.dialog.use_zip_on_lan=on LAN
-preferences.dialog.use_zip_on_lan=ZIP Kompression im LAN verwenden
+preferences.dialog.use_zip_on_lan=im LAN
 #orig#preferences.dialog.use_zip_on_lan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.use_zip_on_lan.tooltip=Nutzen Sie die Einstellung, wenn die ZIP Kompression im bei LAN \u00dcbertragungen aktiviert werden soll.
 #orig#preferences.dialog.verbose=Enable debug logging
