--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1490,7 +1490,7 @@ pro.wizard.activation.pro_activation=PowerFolder Pro Aktivierung
 #orig#pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.recover_password=Passwort vergessen
 #orig#pro.wizard.activation.register_now=Sign up for an account
-pro.wizard.activation.register_now=Jetzt anmelden
+pro.wizard.activation.register_now=Zugangskonto erstellen
 ##pro.wizard.activation.register_now_trial=Please sign up for an free account to use PowerFolder.
 ##pro.wizard.activation.signup_account=Sign up for an account now
 #orig#pro.wizard.activation.subscribe_newsletter=Subscribe to newsletter
