--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1015,7 +1015,7 @@ line_speed.adsl768=DSL 16000 (768Kbit up)
 #orig#line_speed.custom_speed=Custom line
 line_speed.custom_speed=Benutzerdefiniert
 #orig#line_speed.download_speed=Download
-line_speed.download_speed=Download
+line_speed.download_speed=Down
 #orig#line_speed.lan10=LAN 10mbit/s
 line_speed.lan10=LAN 10mbit/s
 #orig#line_speed.lan100=LAN 100mbit/s
@@ -1025,7 +1025,7 @@ line_speed.lan1000=LAN 1000mbit/s
 #orig#line_speed.unlimited=Unlimited
 line_speed.unlimited=Unbegrenzt
 #orig#line_speed.upload_speed=Upload
-line_speed.upload_speed=Upload
+line_speed.upload_speed=Up
 
 #orig#low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 low_memory.configure_failure=PowerFolder konnten keine h\u00f6heren Hauptspeicher-Einstellungen installieren.
