More work on DE translations

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -86,43 +86,44 @@ action_add_ignore.description=Dateien von der Synchronization ausschließen
 action_add_ignore.key=A
 action_add_ignore.name=Ausschließen
 
+action_add_invitee.description=Eingeladenen hinzufügen
+action_add_invitee.key=H
+action_add_invitee.name=Hinzufügen
+
+action_ask_for_friendship.description=Nach Freundschaftseinladung fragen
+action_ask_for_friendship.key=F
+action_ask_for_friendship.name=Fragen
+
+action_backup_online_storage.description=Diesen folder online sichern
+action_backup_online_storage.key=B
+action_backup_online_storage.name=Online backup starten
+
+action_clear_completed_downloads.description=Räumt die Liste der kürzlich fertiggestellten Downloads auf
+action_clear_completed_downloads.key=A
+action_clear_completed_downloads.name=Aufräumen
+
+action_clear_completed_uploads.description=Räumt die Liste der kürzlich fertiggestellten Uploads auf
+action_clear_completed_uploads.key=A
+action_clear_completed_uploads.name=Aufräumen
+
+action_clear_problem.description=Entfernt Probleme von der Liste
+action_clear_problem.key=A
+action_clear_problem.name=Wegräumen
+
+action_configure_transfer_mode.description=Diesen Transfer Modus bearbeiten
+action_configure_transfer_mode.key=K
+action_configure_transfer_mode.name=Konfigurieren
+
+action_connect.description=Manuell mit einem Computer verbinden
+action_connect.key=V
+action_connect.name=Verbinden
+
+
 ## -------------------------------------------------------------------
 ##
 ## @ TOT: Bis hier übersetzt
 ##
 ## -------------------------------------------------------------------
-
-##action_add_invitee.description=Add invitee
-##action_add_invitee.key=A
-##action_add_invitee.name=Add
-
-##action_ask_for_friendship.description=Ask for friendship
-##action_ask_for_friendship.key=A
-##action_ask_for_friendship.name=Ask
-
-##action_backup_online_storage.description=Backup this folder to Online Storage
-##action_backup_online_storage.key=B
-##action_backup_online_storage.name=Start online backup
-
-##action_clear_completed_downloads.description=Clear the list of the recently completed downloads
-##action_clear_completed_downloads.key=C
-##action_clear_completed_downloads.name=Cleanup
-
-##action_clear_completed_uploads.description=Clear the list of the recently completed uploads
-##action_clear_completed_uploads.key=C
-##action_clear_completed_uploads.name=Cleanup
-
-##action_clear_problem.description=Clear problem(s) from list
-##action_clear_problem.key=C
-##action_clear_problem.name=Cleanup
-
-##action_configure_transfer_mode.description=Configure this transfer mode
-##action_configure_transfer_mode.key=C
-##action_configure_transfer_mode.name=Configure
-
-##action_connect.description=Manually connect to a PowerFolder computer
-##action_connect.key=C
-##action_connect.name=Connect
 
 ##action_delete_file.description=Delete file
 ##action_delete_file.key=D
