More DE translations

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -118,64 +118,63 @@ action_connect.description=Manuell mit einem Computer verbinden
 action_connect.key=V
 action_connect.name=Verbinden
 
+action_delete_file.description=Datei löschen
+action_delete_file.key=L
+action_delete_file.name=Löschen
+
+action_delete_transfer_mode.description=Löscht diesen Transfer modus
+action_delete_transfer_mode.key=L
+action_delete_transfer_mode.name=Löschen
+
+action_details.description=Zeigt Detailinformation an 
+action_details.key=D
+action_details.name=Details
+
+action_download_file.description=Läd die Datei heruter
+action_download_file.key=D
+action_download_file.name=Download
+
+action_edit_archive.description=Archiveinstellungen ändern
+action_edit_archive.key=B
+action_edit_archive.name=Archiveinstellungen
+
+action_edit_ignore.description=Ein Muster in der Liste bearbeiten
+action_edit_ignore.key=B
+action_edit_ignore.name=Bearbeiten
+
+action_find_computers.description=Andere Computer suchen
+action_find_computers.key=S
+action_find_computers.name=Computer suchen
+
+action_folder_problem.description=Zeige Problem mit Folder falls vorhanden
+action_folder_problem.key=P
+action_folder_problem.name=Folder Probleme
+
+action_help.description=Online Hilfe
+action_help.key=H
+action_help.name=Hilfe
+
+action_hide_offline.description=Computer die offline sind werden versteckt
+action_hide_offline.key=V
+action_hide_offline.name=Offline Computer verstecken
+
+action_invite_advanced.description=Zeigt weitere Einstellungen an
+action_invite_advanced.key=E
+action_invite_advanced.name=Erweitere Einstellungen
+
+action_invite_friend.description=Invite a friend to join this folder
+action_invite_friend.key=E
+action_invite_friend.name=Einladen
+
+action_join_online_storage.description=Online folder lokal speichern
+action_join_online_storage.key=B
+action_join_online_storage.name=Speichern
 
 ## -------------------------------------------------------------------
 ##
 ## @ TOT: Bis hier übersetzt
 ##
 ## -------------------------------------------------------------------
-
-##action_delete_file.description=Delete file
-##action_delete_file.key=D
-##action_delete_file.name=Delete
-
-##action_delete_transfer_mode.description=Delete this transfer mode
-##action_delete_transfer_mode.key=D
-##action_delete_transfer_mode.name=Delete
-
-##action_details.description=Display the details panel
-##action_details.key=D
-##action_details.name=Details
-
-##action_download_file.description=Download file
-##action_download_file.key=D
-##action_download_file.name=Download
-
-##action_edit_archive.description=Edit archive mode details
-##action_edit_archive.key=E
-##action_edit_archive.name=Edit Archive
-
-##action_edit_ignore.description=Edit a pattern in the ignore list
-##action_edit_ignore.key=E
-##action_edit_ignore.name=Edit
-
-##action_find_computers.description=Search for other computers
-##action_find_computers.key=F
-##action_find_computers.name=Find Computers
-
-##action_folder_problem.description=Display any folder problems
-##action_folder_problem.key=P
-##action_folder_problem.name=Folder Problems
-
-##action_help.description=Online help
-##action_help.key=H
-##action_help.name=Help
-
-##action_hide_offline.description=Offline computers will be filtered from this search result
-##action_hide_offline.key=H
-##action_hide_offline.name=Hide offline computers
-
-##action_invite_advanced.description=Show advanced options
-##action_invite_advanced.key=A
-##action_invite_advanced.name=Advanced options
-
-##action_invite_friend.description=Invite a friend to join this folder
-##action_invite_friend.key=I
-##action_invite_friend.name=Invite
-
-##action_join_online_storage.description=Locally join this Online Storage folder
-##action_join_online_storage.key=J
-##action_join_online_storage.name=Join
 
 ##action_members_refresh.description=Refreshes member list and permissions
 ##action_members_refresh.key=R
